--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "ts-stater",
-  "version": "0.0.0",
-  "packageManager": "pnpm@7.18.2",
-  "description": "",
+  "name": "@bryce-loskie/cssup",
+  "version": "0.0.1",
+  "packageManager": "pnpm@7.26.3",
+  "description": "Bundle CSS using lightningcss",
   "author": "guygubaby <guygubaby@gmail.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/guygubaby",
-  "homepage": "https://github.com/guygubaby/ts-stater#readme",
+  "homepage": "https://github.com/guygubaby/cssup#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guygubaby/ts-stater.git"
+    "url": "git+https://github.com/guygubaby/cssup.git"
   },
   "bugs": {
-    "url": "https://github.com/guygubaby/ts-stater/issues"
+    "url": "https://github.com/guygubaby/cssup/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "css",
+    "lightningcss",
+    "bundler"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -34,28 +38,41 @@
       ]
     }
   },
+  "bin": {
+    "cssup": "./bin/cssup.mjs"
+  },
   "files": [
-    "dist"
+    "dist",
+    "bin"
   ],
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "prepublishOnly": "pnpm build",
     "start": "tsx src/index.ts",
-    "dev": "pnpm build -- --watch",
+    "dev": "pnpm build --watch",
     "build": "tsup",
     "release": "bumpp --commit --push --tag",
     "lint": "eslint .",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "lightningcss": "^1.18.0"
+  },
   "devDependencies": {
     "@bryce-loskie/eslint-config": "^2.0.12",
     "@bryce-loskie/tc": "^0.1.5",
     "@types/node": "^18.11.18",
     "bumpp": "^8.2.1",
-    "eslint": "^8.32.0",
+    "cac": "^6.7.14",
+    "chokidar": "^3.5.3",
+    "eslint": "^8.33.0",
+    "picocolors": "^1.0.0",
     "tsup": "^6.5.0",
     "tsx": "^3.12.2",
-    "typescript": "^4.9.4",
-    "vitest": "^0.28.3"
+    "typescript": "^4.9.5",
+    "vitest": "^0.28.4"
   }
 }
