--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "start": "tsx src/index.ts",
     "dev": "pnpm build --watch",
     "build": "tsup",
-    "release": "bumpp --commit --push --tag",
+    "release": "bumpp --commit --push --tag && pnpm publish --access public",
     "lint": "eslint .",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
@@ -69,6 +69,7 @@
     "bumpp": "^8.2.1",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
+    "colorette": "^2.0.19",
     "eslint": "^8.33.0",
     "picocolors": "^1.0.0",
     "tsup": "^6.5.0",
