--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bryce-loskie/cssup",
   "version": "0.1.0",
-  "packageManager": "pnpm@7.26.3",
+  "packageManager": "pnpm@8.7.1",
   "description": "Bundle CSS using lightningcss",
   "author": "guygubaby <guygubaby@gmail.com>",
   "license": "MIT",
@@ -59,20 +59,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "lightningcss": "^1.18.0",
-    "unconfig": "^0.3.7"
+    "lightningcss": "^1.21.7",
+    "unconfig": "^0.3.10"
   },
   "devDependencies": {
-    "@bryce-loskie/eslint-config": "^2.0.12",
+    "@antfu/eslint-config": "^0.41.0",
     "@bryce-loskie/tc": "^0.1.5",
-    "@types/node": "^18.11.18",
-    "bumpp": "^8.2.1",
+    "@types/node": "^20.5.9",
+    "bumpp": "^9.2.0",
     "cac": "^6.7.14",
-    "colorette": "^2.0.19",
-    "eslint": "^8.33.0",
-    "tsup": "^6.5.0",
-    "tsx": "^3.12.2",
-    "typescript": "^4.9.5",
-    "vitest": "^0.28.4"
+    "colorette": "^2.0.20",
+    "eslint": "^8.48.0",
+    "tsup": "^7.2.0",
+    "tsx": "^3.12.8",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.3"
   }
 }
